# react-tictactoe

./: .prettierrc  README.md  package-lock.json  package.json
frontend/: package-lock.json  package.json
frontend/src/: App.css  TicTacToe.css  TicTacToe.tsx  main.tsx  store.ts
frontend/src/api/: api.ts
frontend/src/components/: App.tsx  ErrorBox.css  ErrorBox.tsx  GamesList.css  GamesList.tsx  History.css  History.tsx  TicTacToe.css  TicTacToe.tsx  TicTacToeHistory.tsx  ticTacToeTypes.ts
frontend/src/features/currentGame/: constructField.ts  currentGameSlice.ts
frontend/src/features/games/: gamesSlice.ts
frontend/src/sagas/: currentGameFetchSaga.ts  gamesDeleteSaga.ts  gamesFetchSaga.ts  rootSaga.ts  saveCurrentGameSaga.ts
src/: App.tsx  TicTacToe.css  TicTacToe.tsx  reduxHooks.ts  ticTacToeTypes.ts
src/features/history/: history.ts
tictactoe-server/: .env  .gitignore  Cargo.toml
tictactoe-server/migrations/: 20230925134117_init.down.sql  20230925134117_init.up.sql
tictactoe-server/src/: handlers.rs  main.rs  model.rs  schema.rs
