[package]
name = "tictactoe-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
sqlx = { version = "0.7", features = [
    "sqlite",
    "runtime-tokio",
    "tls-native-tls",
    "chrono",
] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"

[profile.dev.package.sqlx-macros]
opt-level = 3
